# jag_algo

./: CMakeLists.txt  LICENSE  README.md
algorithms/: CMakeLists.txt  lcp_array.hpp  lcp_array.t.cpp  suffix_array.hpp  suffix_array.t.cpp  suffix_automaton.hpp  suffix_automaton.t.cpp  suffix_tree.hpp  suffix_tree.t.cpp
